<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="prayerbook">Molitvenik</string>
    <string name="breviary">Brevijar</string>
    <string name="gospel">Liturgijska čitanja dana</string>
    <string name="quotes">Izreke</string>
    <string name="sermons">Propovijedi</string>
    <string name="multimedia">Multimedija</string>
    <string name="trending">Aktualno</string>
    <string name="songbook">Pjesmarica</string>
    <string name="vocation">Poziv</string>
    <string name="spirituality">Duhovnost</string>
    <string name="answers">Odgovori</string>
    <string name="live">Uživo</string>
    <string name="title_default">Naslov</string>
    <string name="the_search">Pretraga</string>
    <string name="to_search">Pretraži…</string>
    <string name="title_share_mail">E-pošta</string>
    <string name="title_share">Dijeli</string>
    <string name="recommendation">Aplikacija Nova Eva je hit! Preporučam:</string>
    <string name="install_instruction">Instaliraj aplikaciju Nova Eva:</string>
    <string name="app_links">\n\nAndroid: https://play.google.com/store/apps/details?id=hr.bpervan.novaeva.main\n\niOS: https://itunes.apple.com/us/app/nova-eva/id599928807</string>
    <string name="not_supported">Još nije podržano</string>
    <string name="mail_preamble_praise_the_lord">Hvaljen Isus,\n</string>
    <string name="mail_intro_vocation">javljam vam se jer razmišljam o duhovnom pozivu.</string>
    <string name="thinking_of_vocation">Razmišljam o pozivu</string>
    <string name="vocation_email">duhovnipoziv@gmail.com</string>
    <string name="having_a_question">Imam pitanje</string>
    <string name="answers_email">odgovori.novaeva@gmail.com</string>
    <string name="action_settings">Postavke</string>
    <string name="laudato_copyright">Ovaj časoslov se preuzima sa www.laudato.hr</string>
    <string name="ks_copyright">Prijevodi: Copyright KS www.ks.hr</string>
    <string name="introduction_identifier">Uvod:</string>
    <string name="error_fetching_data">Dohvaćanje podataka nije uspjelo</string>
    <string name="network_unavailable">Internetska veza nije dostupna</string>
    <string name="network_changed_player_stopped">Detektirana je promjena mreže - reprodukcija zvuka zaustavljena</string>
    <string name="try_again">Pokušaj ponovno</string>
    <string name="go_back">Povratak</string>
    <string name="error">Greška</string>
    <string name="dummyDesc"/>
    <string name="pause">Pauziraj</string>
    <string name="play">Pokreni</string>
    <string name="stop">Zaustavi</string>
    <string name="radio">Radio</string>
    <string name="radio_stations">Radio stanice</string>
    <string name="info_about">Informacije</string>
    <string name="help">Pomoć</string>
    <string name="text_plus_minus">Tekst +/-</string>
    <string name="theme">Izgled</string>
    <string name="share">Podijeli</string>
    <string name="bookmarks">Oznake</string>
    <string name="bookmark">Označi</string>
    <string name="unbookmark">Odznači</string>
    <string name="bookmarked">Oznaka dodana</string>
    <string name="unbookmarked">Oznaka uklonjena</string>
    <string name="home">Početna</string>
    <string name="church">Crkva</string>
    <string name="send_email_failed">Slanje e-pošte nije uspjelo</string>
    <string name="share_failed">Dijeljenje nije uspjelo</string>
    <string name="default_live_title">PRIJENOS UŽIVO</string>

</resources>