<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/eva_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/evaDirectoryLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/evaDirectoryCollapsingBar"
            layout="@layout/collapsing_directory_header"/>

        <include
            android:id="@+id/evaRecyclerView"
            layout="@layout/eva_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <include
        android:id="@+id/radioBtn"
        style="@style/eva_custom_floating_button"
        layout="@layout/radio_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <include
        android:id="@+id/optionsBtn"
        style="@style/eva_custom_floating_button"
        layout="@layout/options_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/btnPoziv"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_razmisljam_o_pozivu"
        android:contentDescription="@string/dummyDesc"
        android:gravity="center"
        android:text="@string/thinking_of_vocation"
        android:textColor="@color/WhiteSmoke"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/btnPitanje"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_imam_pitanje"
        android:contentDescription="@string/dummyDesc"
        android:gravity="center"
        android:text="@string/having_a_question"
        android:textColor="@color/WhiteSmoke"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>