<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/eva_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context="hr.bpervan.novaeva.activities.EvaContentActivity">

        <include
            android:id="@+id/evaCollapsingBar"
            layout="@layout/collapsing_content_header"/>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="80dp">

                <com.google.android.exoplayer2.ui.PlayerView
                    android:id="@+id/player_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imgLink"
                    android:layout_marginTop="5dp"
                    android:focusable="true"
                    android:padding="20dp"
                    android:visibility="gone"
                    app:hide_on_touch="false"
                    app:show_timeout="-1"
                    app:shutter_background_color="?attr/colorPrimary"
                    app:use_artwork="false"
                    app:use_controller="true"/>

                <ProgressBar
                    android:id="@+id/loadingCircle"
                    style="@style/eva_loading_circle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/player_view"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:indeterminate="true"
                    android:indeterminateOnly="true"
                    android:visibility="visible"
                    />

                <WebView
                    android:id="@+id/vijestWebView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/loadingCircle"
                    android:layout_marginTop="5dp"
                    android:textColor="#4c4c4c"/>

                <ImageView
                    android:id="@+id/imgMp3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"

                    android:layout_marginRight="25dp"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/dummyDesc"
                    android:src="@drawable/vijest_ind_mp3_inactive"
                    android:visibility="visible"/>

                <ImageView
                    android:id="@+id/imgLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/dummyDesc"
                    android:src="@drawable/vijest_ind_www_inactive"
                    android:visibility="visible"/>

                <ImageView
                    android:id="@+id/imgText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"

                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/dummyDesc"
                    android:src="@drawable/vijest_ind_txt_inactive"
                    android:visibility="visible"/>


            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <TextView
        android:id="@+id/btnPoziv"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:background="@drawable/button_razmisljam_o_pozivu"
        android:contentDescription="@string/dummyDesc"
        android:gravity="center"
        android:text="@string/thinking_of_vocation"
        android:textColor="@color/WhiteSmoke"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/radioBtn"
        app:layout_constraintBottom_toBottomOf="@id/radioBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/btnPitanje"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:background="@drawable/button_imam_pitanje"
        android:contentDescription="@string/dummyDesc"
        android:gravity="center"
        android:text="@string/having_a_question"
        android:textColor="@color/WhiteSmoke"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/radioBtn"
        app:layout_constraintBottom_toBottomOf="@id/radioBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <include
        android:id="@+id/radioBtn"
        style="@style/eva_custom_floating_button"
        layout="@layout/radio_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <include
        android:id="@+id/optionsBtn"
        style="@style/eva_custom_floating_button"
        layout="@layout/options_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>

